# pyfilament

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  package-lock.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: build.yml  publish.yml  pytest.yml  test.yml
alembic/: env.py
alembic/versions/: 3e2df1e9f806_.py
backend/alembic_filament/: env.py  script.py.mako
backend/filament/: app.py  cache_keys.py  cache_utils.py  cli.py  cli_cleanup.py  db_models.py  db_session.py  filament.py  filament_api.py  func_registry.py  hooks.py  main.py  pyproject.toml  redis_handler.py  redis_semaphore.py  redis_utils.py  setup_logging.py  task_queue.py  task_state.py  test_app.py  utils.py  utils_call_stack.py  utils_dependency.py
backend/filament/api/: routes.py
backend/filament/api/logic/: task_run_dict.py
backend/filament/api/resolvers/: task.py
backend/filament/logic/: task_run.py
backend/filament/resolvers/: task.py
backend/filament/tests/: semaphore_test.py  token_bucket_test.py
backend/filament/types/: task.py
docs/: docs.json  installation.mdx  introduction.mdx
docs/api/: graphql-mutations.mdx  graphql-overview.mdx  graphql-queries.mdx  hooks.mdx  rest-task-runs.mdx  task-config.mdx  task-decorator.mdx  task-states.mdx
docs/concepts/: task-states.mdx  workers.mdx
docs/configuration/: caching.mdx  concurrency.mdx  rate-limiting.mdx  retries.mdx  timeouts.mdx
docs/distributed/: queues.mdx  subtasks.mdx  workers.mdx
docs/examples/: hello-world.mdx  overview.mdx  weather-agent.mdx  web-analyst.mdx
docs/observability/: cancellation.mdx  dashboard.mdx  logging.mdx
examples/: get_weather.py  hello_world.py  test_get_weather.py
examples/web_analyst/: app.py  test_app.py  test_web_analyst.py  worker.py
filament-ui/: Dockerfile  package-lock.json  package.json  vite.config.ts
filament-ui/src/: App.jsx  TaskRunPage.jsx  TaskRunsComparePage.jsx  TaskTypePage.jsx  TaskTypeStackPage.jsx  (+4 more)
tests/: task_test.py  test_cached_task.py  test_cancel.py  test_cancel_state.py  test_queue.py  test_semaphore.py  test_task.py  test_token_bucket.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+73 files in other folders)
