[project]
name = "ray-test"
version = "0.1.0"
description = ""
authors = [
    {name = "jameswu1991",email = "james@centauri-ai.tech"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ray[default] (>=2.44.0,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "anyio (>=4.9.0,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "redis[async] (>=5.2.1,<6.0.0)",
    "fire (>=0.7.0,<0.8.0)",
    "python-consul (>=1.1.0,<2.0.0)",
    "kazoo (>=2.10.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
